Added Firebase DB for dynamic data

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Ignore Firebase_credentials (because noone needs to know these ;) )
+fire_cred.json
